--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -21,13 +21,13 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pockettrend.neomonsters">Neo Monsters</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.ahmad4maylod.cq">Circle Quest: Pofo Game</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.anogames.WordTowerPremiumPuzzle">Word Tower - Premium Puzzle</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.clockmaker.jewellegend.classic.match3.puzzle">Jewels Charm: Match 3 Game Pro</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.bar10n.find5x">Brain Game - Find5x</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.boymate10.find5x">Find5x</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.boymate10.find5x4p">Brain Game - Find5x 4P</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.isavasokur.boymate10">Brain Game - Boymate10</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.memof.at">Memory Game: Fruit</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.mgif.heroeslegend.idlebattle.action.rpg.premium">Heroes Legend - Epic Fantasy</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.shadow.survival.rogue.action.shooter.game.premium">Shadow Survival: Offline Games</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
