--- a/game_pages/epic.html
+++ b/game_pages/epic.html
@@ -17,7 +17,9 @@
         </a>
     </div>
     <div class="game-container">
-        <p>No free games available today.</p>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/scourgebringer">Scourgebringer</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/songs-of-silence-778d86">Songs of Silence</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/zero-hour-8449a0">Zero Hour</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
