--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -21,7 +21,8 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.avalar.athree.epl.gp">Avalar: Shadow War Premium</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.fansipan.idle.summoners.era.heroes.afk">Summoners Era: Idle Strategy</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gdx.dh.game.sdefence">Final Castle Defence:Idle RPG</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pixelstar.PixelFBladeVIP">Pixel Blade M VIP</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.whitewind.findthedifferences">Find the Differences</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=me.nextdoors.towervip">Secret Tower VIP (IDLE RPG)</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
