--- a/game_pages/epic.html
+++ b/game_pages/epic.html
@@ -17,9 +17,8 @@
         </a>
     </div>
     <div class="game-container">
-        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/scourgebringer">Scourgebringer</a></div>
-        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/songs-of-silence-778d86">Songs of Silence</a></div>
-        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/zero-hour-8449a0">Zero Hour</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/godzillawars-2c30e4">Godzilla Voxel Wars</a></div>
+        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/zoeti-3ccef9">Zoeti</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
