--- a/game_pages/epic.html
+++ b/game_pages/epic.html
@@ -17,8 +17,7 @@
         </a>
     </div>
     <div class="game-container">
-        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/godzillawars-2c30e4">Godzilla Voxel Wars</a></div>
-        <div class="game-item"><a href="https://store.epicgames.com/en-US/p/zoeti-3ccef9">Zoeti</a></div>
+        <p>No free games available today.</p>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
