--- a/game_pages/steam.html
+++ b/game_pages/steam.html
@@ -17,6 +17,7 @@
         </a>
     </div>
     <div class="game-container">
+        <div class="game-item"><a href="https://store.steampowered.com/app/552500/Warhammer_Vermintide_2/?snr=1_7_7_2300_150_1">Warhammer: Vermintide 2</a></div>
         <div class="game-item"><a href="https://store.steampowered.com/app/2747770/Wednesdays/?snr=1_7_7_2300_150_1">Wednesdays</a></div>
     </div>
 <footer>
