--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -24,6 +24,7 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.fori.slimelegends">Slime Legends - Survivor</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gdx.dh.game.asmg">Pixel Knights VIP</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.livezen.BurningSky.vip">Burning Sky VIP</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.nomadgames.dungeonmaster">Everybody's RPG: Reboot</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.pgstudio.survivalpro">Live or Die: Survival Pro</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.redantz.game.za3p">Zombie Age 3 Premium: Survival</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.zitga.empire.warriors.td.tower.defense">Empire Warrior: Tower Defense</a></div>
