--- a/game_pages/prime_gaming.html
+++ b/game_pages/prime_gaming.html
@@ -17,7 +17,26 @@
         </a>
     </div>
     <div class="game-container">
-        <p>No free games available today.</p>
+        <div class="game-item"><a href="https://gaming.amazon.com/forgotten-realms-the-archives-collection-two-gog/dp/amzn1.pg.item.4568db25-39b6-466b-8e2b-e01975fd2c98?g=s&ingress=amzn&ref_=SM_ForgottenRealmsTheArchivesCollectionTwo_S01_FGWP_CRWN">Forgotten Realms: The Archives - Collection Two</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/christmas-adventure-candy-storm-legacy/dp/amzn1.pg.item.ca232c9b-7cf7-4717-93b9-23fb1ad3edec?g=s&ingress=amzn&ref_=SM_ChristmasAdventureCandyStorm_S01_FGWP_CRWN">Christmas Adventure: Candy Storm</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/lego-2k-drive-epic/dp/amzn1.pg.item.748f3b5e-8a5c-49be-abd1-d4f2a7e525f4?g=s&ingress=amzn&ref_=SM_LEGO2KDrive_S01_FGWP_CRWN">LEGO 2K Drive</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/gylt-aga/dp/amzn1.pg.item.4352c9d6-2081-468b-942e-6eb58e7b3eab?g=s&ingress=amzn&ref_=SM_GYLT_S01_FGWP_CRWN">GYLT</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/forgotten-realms-the-archives-collection-one-gog/dp/amzn1.pg.item.40b12069-c053-47a4-b4d4-b0c7cf016c13?g=s&ingress=amzn&ref_=SM_ForgottenRealmsTheArchivesCollectionOne_S01_FGWP_CRWN">Forgotten Realms: The Archives - Collection One</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/gunslugs-gog/dp/amzn1.pg.item.f7fe7089-eca7-4ebf-9ab2-45fd60f026ac?g=s&ingress=amzn&ref_=SM_Gunslugs_S01_FGWP_CRWN">Gunslugs</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/big-adventure-trip-to-europe-6-ce-legacy/dp/amzn1.pg.item.5823fdb8-2192-45f8-90af-ef446602b3b6?g=s&ingress=amzn&ref_=SM_BigAdventureTriptoEurope6CE_S01_FGWP_CRWN">Big Adventure: Trip to Europe 6 - CE</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/plateup-epic/dp/amzn1.pg.item.bc7135d4-6239-4a0f-bd01-6b97eae7d9ea?g=s&ingress=amzn&ref_=SM_PlateUp_S01_FGWP_CRWN">PlateUp!</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/dungeons-dragons-krynn-series-gog/dp/amzn1.pg.item.3aefcf19-f3d9-44f6-b5a8-bc92b661726c?g=s&ingress=amzn&ref_=SM_DungeonsDragonsKrynnSeries_S01_FGWP_CRWN">Dungeons & Dragons: Krynn Series</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/dream-tactics-gog/dp/amzn1.pg.item.f4ecdb00-436e-4380-b646-ac1cb04a2d17?g=s&ingress=amzn&ref_=SM_DreamTactics_S01_FGWP_CRWN">Dream Tactics</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/fallout-76-pc-microsoft/dp/amzn1.pg.item.c49f06ee-41f3-41cf-b719-0a4a6940b5d0?g=s&ingress=amzn&ref_=SM_Fallout76PC_S03_FGWP_CRWN">Fallout 76 (PC)</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/dark-city-kyiv-ce-aga/dp/amzn1.pg.item.db91c852-8643-4a44-a5e1-20ab4092e317?g=s&ingress=amzn&ref_=SM_DarkCityKyivCE_S01_FGWP_CRWN">Dark City: Kyiv - CE</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/fort-solis-gog/dp/amzn1.pg.item.76bbc460-ccab-4714-b70f-e3b6cb9d2192?g=s&ingress=amzn&ref_=SM_FortSolis_S01_FGWP_CRWN">Fort Solis</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/another-world-20th-anniversary-edition-gog/dp/amzn1.pg.item.8909fde2-8415-4625-bd9d-0e29055ef728?g=s&ingress=amzn&ref_=SM_AnotherWorld20thAnniversaryEdition_S01_FGWP_CRWN">Another World: 20th Anniversary Edition</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/gas-station-simulator-epic/dp/amzn1.pg.item.1d1450f8-971b-419e-9890-0a3d81f06925?g=s&ingress=amzn&ref_=SM_GasStationSimulator_S01_FGWP_CRWN">Gas Station Simulator</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/new-tales-from-the-borderlands-epic/dp/amzn1.pg.item.c7f2c4fd-2f63-4b4e-ab71-922692d001fc?g=s&ingress=amzn&ref_=SM_NewTalesfromtheBorderlands_S01_FGWP_CRWN">New Tales from the Borderlands</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/halloween-stories-horror-movie-ce-aga/dp/amzn1.pg.item.d78f16f2-76aa-486f-85b3-686e4253b8fb?g=s&ingress=amzn&ref_=SM_HalloweenStoriesHorrorMovieCE_S01_FGWP_CRWN">Halloween Stories: Horror Movie - CE</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/xcom-2-gog/dp/amzn1.pg.item.13e05c49-cb97-43b3-82c2-0fab0271a873?g=s&ingress=amzn&ref_=SM_XCOM2_S01_FGWP_CRWN">XCOM 2</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/empty-shell-gog/dp/amzn1.pg.item.2cd3ca8d-c84b-46a1-82f4-040a0c4ae02f?g=s&ingress=amzn&ref_=SM_EMPTYSHELL_S01_FGWP_CRWN">EMPTY SHELL</a></div>
+        <div class="game-item"><a href="https://gaming.amazon.com/residual-gog/dp/amzn1.pg.item.6c1f74ce-2720-4cb5-a5f1-b996c8a7a1fa?g=s&ingress=amzn&ref_=SM_Residual_S01_FGWP_CRWN">Residual</a></div>
     </div>
 <footer>
     <p>This website is for informational purposes only. The free games listed are subject to availability and changes. Please refer to the respective platforms for the most up-to-date information.</p>
