--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -24,13 +24,11 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.devvisiongames.dglandlight.survival">Dead God Land - Light Survival</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.divmob.epicheroeswar.en.freemium">EHW Premium & stick fight</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.empire.warriors2.premium.epic.tower.td.defender.rush">Empire Defender Offline Games</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.bar10n.find5x">Brain Game - Find5x</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.boymate10.find5x">Find5x</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.boymate10.find5x4p">Brain Game - Find5x 4P</a></div>
-        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.games.isavasokur.boymate10">Brain Game - Boymate10</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.gtm.trafficpuzzlepremium">Traffic Jam Cars Puzzle Legend</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.ibuzz.apk.puzzle4kids82">Puzzle for kids - Animal games</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.mgif.heroeslegend.idlebattle.action.rpg.premium">Heroes Legend - Epic Fantasy</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.shadow.survival.rogue.action.shooter.game.premium">Shadow Survival: Offline Games</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.smalladventuregame.smallredball">Ball Zocos Adventure Game</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.smartgames.word.puzzle.block.crush">Words Search - Word Puzzles</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.unimob.stickman.master.shadow.premium">Stickman Master Premium</a></div>
