--- a/game_pages/google_play.html
+++ b/game_pages/google_play.html
@@ -20,6 +20,7 @@
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=air.com.littlebigplay.games.premium.spellingrightpro">Spelling Right PRO</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.Offstrayer.TheEndComesTomorrow">The End Comes Tomorrow</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.ahmad4maylod.cq">Circle Quest: Pofo Game</a></div>
+        <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.anogames.WordTowerPremiumPuzzle">Word Tower - Premium Puzzle</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.artifact.uforpgvip">[VIP]UFO DUDE RPG : idle wars</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.devvisiongames.dglandlight.survival">Dead God Land - Light Survival</a></div>
         <div class="game-item"><a href="https://play.google.com/store/apps/details?id=com.divmob.epicheroeswar.en.freemium">EHW Premium & stick fight</a></div>
